--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon ./src/index.ts",
-    "build": "tsc"
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -18,6 +25,8 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5"
