--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=4000
 DB_URL=mongodb+srv://Itra2312:Itra2312@cluster0.ni4cth8.mongodb.net/managementsDB?retryWrites=true&w=majority
+SECRET_KEY=verySecretKey-01.02.2023
