feat: add authorization logic with google

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=4000
 DB_URL=mongodb+srv://Itra2312:Itra2312@cluster0.ni4cth8.mongodb.net/managementsDB?retryWrites=true&w=majority
 SECRET_KEY=verySecretKey-01.02.2023
+GOOGLE_CLIENT_ID=764810995596-08d3qlq59d1cifdn34f5go4anpoa3rcs.apps.googleusercontent.com
